# kuwahara-torch

./: README.md  pyproject.toml
example/: generate.py
src/kuwahara_torch/: functional.py  ops.py  utils.py
tests/: test_kuwahara.py  test_ops.py
