# guide: https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
[project]
name = "kuwahara-torch"
version = "0.0.1"
description = "Kuwahara filter in PyTorch."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Evan Arlian", email = "evanarlian2000@gmail.com" }]
keywords = ["pytorch", "filter", "image"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["torch"]

[project.urls]
Homepage = "https://github.com/evanarlian/kuwahara-torch"

[tool.ruff]
src = ["src"]

# turns out src/<pkg_name> will be found automatically
# https://github.com/pypa/packaging-problems/issues/615
